--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="">
             <a class="navbar-brand" href="#">
-                Establecimientos <b>Gasolina</b>
+                Establecimientos gasolina  <b>Medellin-colombia</b>
             </a>
-            <form id="buscar" class=" my-2 my-lg-0">
+            <form id="buscar" >
                 <input class="form-control" type="text" placeholder="Buscar">
             </form>
     </nav>
@@ -39,7 +39,7 @@ crossorigin=""></script>
     <script src="js/API.js"></script>
     <script src="js/UI.js"></script>
     <script src="js/app.js"></script>
-    
+
 
 </body>
 </html>
