Layout responsive fixed

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-    <nav class="">
-            <a class="navbar-brand" href="#">
-                Establecimientos gasolina  <b>Medellin-colombia</b>
-            </a>
+    <nav >
+            <div class="navbar-brand">
+                <p>Establecimientos gasolina <br id="br-title"> <b>Medellin-colombia </b></p>
+            </div>
             <form id="buscar" >
                 <input class="form-control" type="text" placeholder="Buscar">
             </form>
