--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav >
             <div class="navbar-brand">
-                <p>Establecimientos gasolina <br id="br-title"> <b>Medellin-colombia </b></p>
+                <p>Estaciones gasolina <br id="br-title"> <b>Medellin-colombia </b></p>
             </div>
             <form id="buscar" >
                 <input class="form-control" type="text" placeholder="Buscar">
